tests/baselines/reference/enumConflictsWithGlobalIdentifier.errors.txt
tests/cases/compiler/enumConflictsWithGlobalIdentifier.ts(1,6): error TS2300: Duplicate identifier 'Position'.
tests/cases/compiler/enumConflictsWithGlobalIdentifier.ts(4,9): error TS2304: Cannot find name 'IgnoreRulesSpecific'.
tests/cases/compiler/enumConflictsWithGlobalIdentifier.ts(4,29): error TS1003: Identifier expected.
tests/cases/compiler/enumConflictsWithGlobalIdentifier.ts(5,18): error TS2339: Property 'IgnoreRulesSpecific' does not exist on type '{ new (): Position; prototype: Position; }'.


==== tests/cases/compiler/enumConflictsWithGlobalIdentifier.ts (4 errors) ====
    enum Position { 
         ~~~~~~~~
!!! error TS2300: Duplicate identifier 'Position'.
        IgnoreRulesSpecific = 0,
    }
    var x = IgnoreRulesSpecific.
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IgnoreRulesSpecific'.
                                
!!! error TS1003: Identifier expected.
    var y = Position.IgnoreRulesSpecific;
                     ~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'IgnoreRulesSpecific' does not exist on type '{ new (): Position; prototype: Position; }'.
    